# LLD

./: .gitignore  abstract_factory_lld.cpp  builder_patern_lld.cpp  factory_pattern_lld.cpp  observer_designPattern_lld.cpp  pizza_cost_lld.cpp  program  singleton_lld.cpp
LLD_TTT/: design.cpp
LLD_cor_pattern/: design.cpp
ZoomCar_LLD/: CMakeLists.txt  Vehicle.cpp  Vehicle.h  VehicleInventryManager.cpp  VehicleInventryManager.h  main.cpp
strategy_pattern/: CMakeLists.txt  drive_strategy.cpp  drive_strategy.h  main.cpp  normal_drive.cpp  normal_drive.h  offroad_vehicle.cpp  offroad_vehicle.h  power_drive.cpp  power_drive.h  sport_vehicle.cpp  sport_vehicle.h  transport_vehicle.cpp  transport_vehicle.h  vehicle.cpp  vehicle.h
